Changed alert colors in the backend

--- a/resources/assets/less/shared.less
+++ b/resources/assets/less/shared.less
@@ -1,4 +1,4 @@
-/* 
+/*
  * Functions
  */
 .background-image(@relative-image-url) {
@@ -8,6 +8,8 @@
 /*
  * Classes
  */
+
+.btn { outline: none !important }
 
 /* Responsive tables: No more tables. Needs JS to work! */
 .no-more-tables {
