--- a/resources/assets/less/backend.less
+++ b/resources/assets/less/backend.less
@@ -160,7 +160,11 @@ ul.pagination {
 .modal .modal-footer button { .btn(); .btn-default(); margin-left: 5px }
 
 /* Alert */
-.alert { border-radius: 0; }
+.alert { border-radius: 0; font-weight: bold; color: white }
+.alert-success { border-color: #69DD95; background: rgba(105,221,149,0.8); } /* Colors from framycss.org */
+.alert-error { border-color: #F26175; background: rgba(242,97,117,0.8); }
+.alert-warning { border-color: #F8C93F; background: rgba(248,201,63,0.8); }
+.alert-info { border-color: #4ba7e2; background: rgba(75,167,226,0.8); }
 
 /*
  * Subpages
@@ -333,7 +337,7 @@ a {
     }
 }
 
-h1,h2,h3,h4,h5,h6 {
+h1, h2, h3, h4, h5, h6 {
     margin: 0;
     padding: 0;
 }
