--- a/resources/assets/less/backend.less
+++ b/resources/assets/less/backend.less
@@ -295,7 +295,8 @@ ul.pagination {
     }
 }
 .page-config-show-log {
-    .item { margin-bottom: 10px; cursor: pointer; }
+    pre { padding: 0; background-color: transparent; border: none; }
+    .item { margin-bottom: 10px; padding: 10px; border: 1px solid #E3E6E8; white-space: normal; cursor: pointer; }
     .date { color: @blue; }
     .stack { display: none; padding: 10px 0 10px 20px; }
     .line { margin-bottom: 5px; padding: 5px; border-bottom: 1px solid #ddd; }
