--- a/resources/assets/less/backend.less
+++ b/resources/assets/less/backend.less
@@ -163,7 +163,7 @@ ul.pagination {
     a { color: white; text-decoration: underline }
 }
 .alert-success { border-color: #69DD95; background: rgba(105,221,149,0.8); } /* Colors from framycss.org */
-.alert-error { border-color: #F26175; background: rgba(242,97,117,0.8); }
+.alert-danger { border-color: #F26175; background: #F26175; }
 .alert-warning { border-color: #F8C93F; background: rgba(248,201,63,0.8); }
 .alert-info { border-color: #4ba7e2; background: rgba(75,167,226,0.8); }
 
