--- a/resources/assets/less/backend.less
+++ b/resources/assets/less/backend.less
@@ -15,6 +15,9 @@
 @blue: #00afff;
 @hoverblue: darken(@blue, 5%);
 @white: #fff;
+@red: #F26175; /* Color from framycss.org */
+@green: #69DD95; /* Color from framycss.org */
+@yellow: #F8C93F; /* Color from framycss.org */
 
 @font-family: 'Open Sans', sans-serif;
 
@@ -162,9 +165,9 @@ ul.pagination {
     border-radius: 0; font-weight: bold; color: white;
     a { color: white; text-decoration: underline }
 }
-.alert-success { border-color: #69DD95; background: rgba(105,221,149,0.8); } /* Colors from framycss.org */
-.alert-danger { border-color: #F26175; background: #F26175; }
-.alert-warning { border-color: #F8C93F; background: rgba(248,201,63,0.8); }
+.alert-success { border-color: #69DD95; background: @green; }
+.alert-danger { border-color: #F26175; background: @red; }
+.alert-warning { border-color: #F8C93F; background: @yellow; }
 .alert-info { border-color: #4ba7e2; background: rgba(75,167,226,0.8); }
 
 /*
@@ -300,6 +303,11 @@ ul.pagination {
     .date { color: @blue; }
     .stack { display: none; padding: 10px 0 10px 20px; }
     .stack-line { margin-bottom: 5px; padding: 5px; border-bottom: 1px solid #ddd; }
+}
+
+.page-cash-flows.page-model-index {
+    .revenues { padding: 2px 5px; background-color: @green; color: white; font-weight: bold; }
+    .expenses { padding: 2px 5px; background-color: @red; color: white; font-weight: bold; }
 }
 
 .editor-flags {
@@ -525,7 +533,7 @@ header {
 }
 
 .page {
-    max-width: 1000px; margin: 0 40px;
+    max-width: 1400px; margin: 0 40px;
 }
 .page-head {
     display: block; margin-bottom: 40px; padding: 20px 0 20px 40px; border-bottom: 1px solid silver; font-weight: bold;
