--- a/resources/assets/less/backend.less
+++ b/resources/assets/less/backend.less
@@ -308,6 +308,7 @@ ul.pagination {
 .page-cash-flows.page-model-index {
     .revenues { padding: 2px 5px; background-color: @green; color: white; font-weight: bold; }
     .expenses { padding: 2px 5px; background-color: @red; color: white; font-weight: bold; }
+    .summary { padding: 10px; border: 1px solid #ddd }
 }
 
 .editor-flags {
