Added new FAQ module

--- a/app/Modules/MorpheusTheme/Resources/Assets/less/frontend.less
+++ b/app/Modules/MorpheusTheme/Resources/Assets/less/frontend.less
@@ -665,6 +665,11 @@ ul.pagination {
     .btn-restore { position: absolute; bottom: 40px; right: 40px; }
 }
 
+.page-questions-index {
+    h3 { padding-left: 10px; border-left: 4px solid @primaryColor }
+    .text { padding: 20px; background-color: @dark }
+}
+
 /*
  * Main layout
  */
