--- a/resources/assets/less/backend.less
+++ b/resources/assets/less/backend.less
@@ -245,12 +245,12 @@ ul.pagination {
 .page-dashboard {
     #chart { margin-bottom: 20px; width: 100%; height: 250px }
     .quick-access {
-        margin: 20px 0;
-        div { width: 16.666%; min-width: 120px; box-sizing: border-box; float: left; padding: 10px; text-align: center; }
-        a { display: block; margin: 0 10px; padding-bottom: 10px; box-shadow: 0 7px 0 @hoverblue; border-radius: 5px; background-color: @blue; color: white; }
-        a:hover { background-color: lighten(@blue, 5%) }
-        a:active { box-shadow: none; transform: translateY(7px); transition: all 0.08s linear; }
-        i { display: block; padding: 10px; font-size: 40px }
+        margin: 20px 0; text-align: center;
+        a { box-sizing: border-box; display: inline-block; padding: 10px; }
+        a span { display: block; width: 60px; height: 60px; margin: 0 10px; background-color: @blue; }
+        a:hover span { background-color: lighten(@blue, 20%) }
+        a:active { box-shadow: none; transform: translateY(5px); transition: all 0.08s linear; }
+        i { display: block; font-size: 20px; color: white; line-height: 60px }
     }
     .widgets-row {
         div { width: 50%; float: left }
