--- a/resources/assets/less/backend.less
+++ b/resources/assets/less/backend.less
@@ -550,8 +550,8 @@ header {
     max-width: 1400px; margin: 0 40px;
 }
 .page-head {
-    display: block; margin-bottom: 40px; padding: 20px 0 20px 40px; border-bottom: 1px solid silver; font-weight: bold;
-    i { display: inline-block; min-width: 16px; margin-right: 10px; padding: 2px 3px; border-radius: 3px; background-color: @blue; color: white; text-align: center; }
+    display: block; margin-bottom: 40px; padding: 20px 0 20px 40px; border-bottom: 1px solid silver; font-size: 18px; font-weight: bold;
+    i { display: inline-block; width: 30px; margin-right: 10px; border-radius: 3px; line-height: 30px; background-color: @blue; color: white; text-align: center; }
 }
 @media (max-width: @screen-phone) {
     .page { margin: 0 20px; }
