--- a/resources/assets/less/backend.less
+++ b/resources/assets/less/backend.less
@@ -48,8 +48,18 @@ h2.section { margin: 0 0 20px 0; font-size: 14px; font-weight: bold }
 
 /* Form */
 .form-errors {
-    margin: 20px 0; padding: 20px; border: 1px solid #e7ecf0; font-weight: bold; color: @red;
+    position: relative; margin: 20px 0; padding: 20px; border: 1px solid #e7ecf0; font-weight: bold; color: @red;
     li { margin-left: 20px;}
+}
+.form-errors::before {
+    content: "\f071";
+    position: absolute;
+    top: 0;
+    transform: translate(0, -50%);
+    padding: 0 3px;
+    border: 1px solid #e7ecf0;
+    background-color: white;
+    font-family: Font Awesome\ 5 Free;
 }
 .form-group {
     label { .text-overflow(); color: @textdarkgray }
